# emfdash

./: .gitignore  README.md  app.py  config.py  config.toml  config.yaml  constants.py  default.nix  flake.nix  main.py  mise.toml  mqtt.py  pyproject.toml
src/emfdash/: __init__.py  app.py  config.py  constants.py  mqtt.py
src/emfdash/tiles/: __init__.py  common.py  films.py  mqtt_tile.py  phones.py  schedule.py  talk_detail.py  weather.py  weathertest.json
tests/: conftest.py  publish_weather.py  test_main.py  test_mqtt.py
tests/data/: emf_weather.csv  favourites.json  now_and_next.json  open_astley.csv  open_the-ducks.csv  phones_answer-rate.csv  phones_avg-call-seconds.csv  phones_calls-24h.csv  phones_calls-answered.csv  phones_longest-call-seconds.csv  phones_numbers-assigned.csv  phones_numbers-by-service.csv  phones_phones-online.csv  phones_talk-seconds.csv  phones_voicemail-messages.csv  schedule_talks.json  schedule_today.json  weather_hq.csv
tiles/: __init__.py  fediverse.py  films.py  mqtt_tile.py  phones.py  schedule.py  talks.py  weather.py
